2008-10-05  Jost Boekemeier  <jostb@intern>

	* server/php/java/script/CGIRunner.java
	(run): Do not call flush() in the finally block to work around a
	bug in the Sun "Grassfish" J2EE server, which assumes that the
	current thread is an instance of SSLWorkerThread, see
	SSLOutputWriter, line 28: (SSLWorkerThread)Thread.currentThread();
	=> java.lang.ClassCastException: php.java.script.HttpProxy cannot
	be cast to
	com.sun.enterprise.web.connector.grizzly.ssl.SSLWorkerThread
	
	
2008-10-03  Jost Boekemeier  <jostb@intern>

	* server/WEB-INF/web.xml: Added RequestListener declaration.

	* server/php/java/script/servlet/EngineFactory.java
	(releaseScriptEngines, addManaged): New procedures.
	
	* server/php/java/script/servlet/InvocablePhpServletScriptEngine
	(eval): automatically release engine at the end of the request and
	check the servlet pool
	
	* server/php/java/script/servlet/InvocablePhpServletLocalScriptEngine
	(eval): automatically release engine at the end of the request and
	check the servlet pool

	* server/php/java/script/servlet/PhpServletLocalScriptEngine.java
	(eval): check the servlet pool
	
	* server/php/java/script/servlet/PhpServletScriptEngine.java
	(eval): check the servlet pool

	* server/php/java/servlet/PhpCGIServlet.java
	(init): Removed parameter pool_size. The servlet engine's thread
	pool size is determined automatically via a mbean property or
	taken from the php.java.bridge.threads system property.
	(getServletPoolSize): Rewritten
	(checkPool): Rewritten
	(reserveContinuation): New procedure
	(releaseReservedContinuation): New procedure
	
	* server/WEB-INF/web.xml
	(shared_fast_cgi_pool): Obsolete. Users must move all libraries
	from WEB-INF/lib to the global lib.
	(max_requests): Removed. Use the php.java.bridge.threads system
	property instead, if you don't have a mbean property
	"*:type=ThreadPool,name=http*", key: "maxThreads",
	
	* FAQ
	(global-servlet): Users must remove all libraries from
	WEB-INF/lib.
	